--- a/index.html
+++ b/index.html
@@ -98,5 +98,22 @@
         <img src="./icons/c-2 icon-1.svg" alt="icon" />
       </div>
     </div>
+    <div class="card-3">
+      <h3>shop by category</h3>
+      <div class="c-3__content">
+        <div class="c-3__content-chaild">
+          <img src="./images/c-3 img-1.png" alt="img" />
+          <p>Vases</p>
+        </div>
+        <div class="c-3__content-chaild">
+          <img src="./images/c-3 img-2.png" alt="img" />
+          <p>Cups</p>
+        </div>
+        <div class="c-3__content-chaild">
+          <img src="./images/c-3 img-3.png" alt="img" />
+          <p>Plates</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
